Use COPY for adding gtfs info